Fixed header overflow and filter top margin

--- a/client/css/reports.css
+++ b/client/css/reports.css
@@ -138,6 +138,9 @@ main .dataset {
 			cursor: default;
 			box-shadow: 0 0 15px rgba(0, 0, 0, 0.15);
 		}
+		.data-source > header h2::-webkit-scrollbar {
+			display: none;
+		}
 			.data-source > header i {
 				margin-left: 5px;
 			}
@@ -171,7 +174,7 @@ main .dataset {
 		display: none;
 	}
 		.data-source .toolbar > * {
-			margin: 0 5px;
+			margin: var(--gap);
 		}
 			.data-source .toolbar .right {
 				order: 2000;
@@ -307,8 +310,6 @@ main .dataset {
 		}
 
 	.data-source .toolbar.filters {
-		grid-template-columns: repeat(auto-fit, minmax(150px, max-content));
-		margin: 0;
 		padding: 25px calc(var(--gap) * 2) calc(var(--gap) * 2);
 		align-items: flex-start;
 		flex-wrap: wrap;
